Show note controls only to owner user

--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -3,8 +3,9 @@
 <%= render @note %>
 
 <div>
-  <%= link_to "Edit this note", edit_note_path(@note) %> |
+  <% if current_user&.id == @note.user_id %>
+    <%= link_to "Edit this note", edit_note_path(@note) %>
+    <%= button_to "Destroy this note", @note, method: :delete %>
+  <% end %>
   <%= link_to "Back to notes", notes_path %>
-
-  <%= button_to "Destroy this note", @note, method: :delete %>
 </div>
