--- a/app/views/notes/_note_card.html.erb
+++ b/app/views/notes/_note_card.html.erb
@@ -1,12 +1,7 @@
-<div>
+<div id="<%= dom_id note %>">
   <p>
     <strong>Title:</strong>
     <%= note.title %>
-  </p>
-
-  <p>
-    <strong>Content:</strong>
-    <%= note.content %>
   </p>
 
   <p>
