Show note author username instead if user id

--- a/app/views/notes/_note_card.html.erb
+++ b/app/views/notes/_note_card.html.erb
@@ -5,8 +5,8 @@
   </p>
 
   <p>
-    <strong>User:</strong>
-    <%= note.user_id %>
+    <strong>Author:</strong>
+    <%= User.find(note.user_id).username %>
   </p>
 
 </div>
