--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -10,8 +10,8 @@
   </p>
 
   <p>
-    <strong>User:</strong>
-    <%= note.user_id %>
+    <strong>Author:</strong>
+    <%= User.find(note.user_id).username %>
   </p>
 
 </div>
