--- a/app/views/notes/_note_card.html.erb
+++ b/app/views/notes/_note_card.html.erb
@@ -4,9 +4,11 @@
     <%= note.title %>
   </p>
 
-  <p>
-    <strong>Author:</strong>
-    <%= User.find(note.user_id).username %>
-  </p>
+  <% if user_signed_in? %>
+    <p>
+      <strong>Author:</strong>
+      <%= User.find(note.user_id).username %>
+    </p>
+  <% end %>
 
 </div>
