--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <%= link_to "Secret Notes", notes_path %>
+
     <% if current_user %>
         <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
       <% else %>
